Update to the index.html page to include paragraph abt myself.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,5 +14,7 @@
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
     </div>
+
+    <p>Hi, my name is Erys Dennis. I am from Atlanta, Ga and I currently attend Fisk University!<p>
   </body>
 </html>
