--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,5 +16,7 @@
     </div>
 
     <p>Hi, my name is Erys Dennis. I am from Atlanta, Ga and I currently attend Fisk University!<p>
+        <p>These are my dogs Bruno and Moses playing with a bone together!<p>
+        <img src="images/playing.JPG"/>
   </body>
 </html>
