--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,13 +10,13 @@
     <div id="content">
       <h1>Erys Dennis' Portfolio</h1>
       <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <p>Click here to get a random quote:</p>
+      <button onclick="addRandomQuote()">Hello</button>
+      <div id="quote-container"></div>
     </div>
 
     <p>Hi, my name is Erys Dennis. I am from Atlanta, Ga and I currently attend Fisk University!<p>
-        <p>These are my dogs Bruno and Moses playing with a bone together!<p>
-        <img src="images/playing.JPG"/>
+    <p>These are my dogs Bruno and Moses playing with a bone together!<p>
+    <img src="images/playing.JPG"/>
   </body>
 </html>
