updated the JS comment

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -17,6 +17,6 @@
 
     <p>Hi, my name is Erys Dennis. I am from Atlanta, Ga and I currently attend Fisk University!<p>
     <p>These are my dogs Bruno and Moses playing with a bone together!<p>
-    <img src="images/playing.JPG"/>
+    <img id="resize" src="images/playing.JPG"/>
   </body>
 </html>
