include two paragraphs about me with headings.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -15,11 +15,7 @@
       <div id="greeting-container"></div>
     </div>
 
-    <p>Hi, my name is Erys Dennis. I am from Atlanta, Ga and I currently attend Fisk University!<p>
-    <p>These are my dogs Bruno and Moses playing with a bone together!<p>
-    <img src="images/playing.JPG"/>
-
-<!-- heading abt background -->
+    <h3>Programming Background</h3>
     <p>The reason why I started programming was so that I did not have to take another History class
         where all I was goingto do was write essays. In my Sophomore year of high school, my school 
         offered their first Computer Science course that taught by our IT guy. Although I did not
@@ -28,11 +24,14 @@
         in the class. From then on, I decided to major in Computer Science at Fisk University, where
         I started to fall in love with CS.<p>
     
-    <!-- heading abt me -->
+    <h3>About Me</h3>
     <p>My name is Erys Dennis. I am 18 years old and a rising sophomore at Fisk University majoring in 
         Computer Science. I was born in and currently live in Atlanta, Ga. I have two sisters, one older
         and one younger. My younger sister is a rising senior in high school. my older sister is currently
         pursuing her Phd. and lives in Washinton DC. At the present, I have two dogs named Bruno and Moses.
         Bruno is 1 year-old French Bulldog and Moses is a 12 week-old Bullmastiff.<p>
+            
+    <p>These are my dogs Bruno and Moses playing with a bone together!<p>
+    <img src="images/playing.JPG"/>
   </body>
 </html>
