add link to GitHub

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -30,6 +30,9 @@
         and one younger. My younger sister is a rising senior in high school. my older sister is currently
         pursuing her Phd. and lives in Washinton DC. At the present, I have two dogs named Bruno and Moses.
         Bruno is 1 year-old French Bulldog and Moses is a 12 week-old Bullmastiff.<p>
+
+    <h3>Here is a link to my GitHub!</h3>
+    <a href="https://github.com/erysjd" target="_blank">My GitHub</a> <!-- add CSS styling? -->
             
     <p>These are my dogs Bruno and Moses playing with a bone together!<p>
     <img src="images/playing.JPG"/>
