add photo gallery

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -34,9 +34,18 @@
 
         <h3>Here is a link to my GitHub!</h3>
         <a href="https://github.com/erysjd" target="_blank">My GitHub</a> <!-- add CSS styling? -->
-                
-        <p>These are my dogs Bruno and Moses playing with a bone together!<p>
-        <img src="images/playing.JPG"/>
+    </div>
+
+    <div id="content">
+      <h3>More Pics of my Dogs!</h3>
+        <a href="images/bruno-sitting.jpg"><img src="images/bruno-sitting.jpg"/></a>
+        <a href="images/bruno-sleep.JPG"><img src="images/bruno-sleep.JPG"/></a>
+        <a href="images/cute-sleep.JPG"><img src="images/cute-sleep.JPG"/></a>
+        <a href="images/funny-face.jpg"><img src="images/funny-face.jpg"/></a>
+        <a href="images/moses-sleep.JPG"><img src="images/moses-sleep.JPG"/></a>
+        <a href="images/moses.jpg"><img src="images/moses.jpg"/></a>
+        <a href="images/playing.JPG"><img src="images/playing.JPG"/></a>
+        <a href="images/week8.JPG"><img src="images/week8.JPG"/></a>
     </div>
     
   </body>
