add random song function to portfolio

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -9,10 +9,9 @@
   <body>
     <div id="content">
       <h1>Erys Dennis' Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <p>Click here to get a random song that I like:</p>
+      <button onclick="addRandomSong()">Click Me!</button>
+      <div id="song-container"></div>
     </div>
 
     <div id="content">
