add comments and history to html page

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -62,7 +62,7 @@
         </form>
 
         <p>Comment history</p>
-        <ul id="history"></ul>
+        <ul id="comment-container"></ul>
     </div>
     
   </body>
