--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -52,8 +52,7 @@
     <div id="content">
         <h3>Comment Section</h3>
         <label for="quantity">Show:</label>
-        <input type="number" id="num-choice" name="quantity" max="20" min="0">
-        <input type="submit" onclick="fetchComments()">
+        <input type="number" id="num-choice" name="quantity" max="20" min="0" onchange="fetchComments()">
                 
         <form action="/data" method="POST">
 
