--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -53,6 +53,14 @@
         <h3>Comment Section</h3>
         <label for="quantity">Show:</label>
         <input type="number" id="num-choice" name="quantity" max="20" min="0" onchange="fetchComments()">
+
+        <select id="language" onchange="getLang()">
+        <option value="es">English</option>
+        <option value="zh">Chinese</option>
+        <option value="es">Spanish</option>
+        <option value="hi">Hindi</option>
+        <option value="ar">Arabic</option>
+        </select>
                 
         <form action="/data" method="POST">
 
