--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -54,7 +54,7 @@
         <label for="quantity">Show:</label>
         <input type="number" id="num-choice" name="quantity" max="20" min="0" onchange="fetchComments()">
 
-        <select id="language" onchange="getLang()">
+        <select id="language" onchange="fetchComments()">
             <option value="es">English</option>
             <option value="zh">Chinese</option>
             <option value="es">Spanish</option>
