--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -47,15 +47,15 @@
         <a href="images/week8.JPG"><img src="images/week8.JPG"/></a>
     </div>
 
+    <button onclick="revealComments()">Show Comments</button>
 
-    <div id="content">
-        <button onclick="revealComments()">Show Comments</button>
+    <div id="comm-form">
 
         <h3>Comment Section</h3>
         <label for="quantity">Show:</label>
         <input type="number" id="num-choice" name="quantity" max="20" min="0" onchange="fetchComments()">
                 
-        <form action="/data" method="POST" id="comm-form">
+        <form action="/data" method="POST" >
 
         <textarea name="text-input" placeholder="public comment..."></textarea>
         <br/><br/>
