finish authentication API

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body onload="revealComments()">
+  <body onload="revealComments()" id="content">
     <div id="content">
       <h1>Erys Dennis' Portfolio</h1>
       <p>Click here to get a random song that I like:</p>
@@ -32,7 +32,7 @@
             I started to fall in love with CS.<p>
 
         <h3>Here is a link to my GitHub!</h3>
-        <a href="https://github.com/erysjd" target="_blank">My GitHub</a> <!-- add CSS styling? -->
+        <a href="https://github.com/erysjd" target="_blank">My GitHub</a>
     </div>
 
     <div id="content">
@@ -46,8 +46,6 @@
         <a href="images/playing.JPG"><img src="images/playing.JPG"/></a>
         <a href="images/week8.JPG"><img src="images/week8.JPG"/></a>
     </div>
-
-    <button onclick="revealComments()">Show Comments</button>
 
     <div id="comm-form">
 
